# CS5220-final-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  gpu.cu  job-gpu  main.cpp  omp.cpp  ref.ipynb  serial.cpp  vis.ipynb
